# rust_rgl_ledger

./: .gitignore  Cargo.toml  README  README.md
migrations/2023-12-23-162229_create_acquisitions/: down.sql  up.sql
migrations/2023-12-23-163920_create_dispositions/: down.sql  up.sql
migrations/2024-01-03-181224_create_acquisition_dispositions/: down.sql  up.sql
migrations/2024-01-05-210947_create_impairments/: down.sql  up.sql
migrations/2024-01-09-231640_create_fair_values/: down.sql  up.sql
migrations/2024-01-11-193740_create_acquisition_fair_values/: down.sql  up.sql
migrations/2024-01-11-215604_drop_impairments/: up.sql
migrations/2024-01-11-220259_drop_usd_cents_btc_impaired_value/: up.sql
migrations/2025-01-01-000000_add_wallet_dual_matching/: down.sql  up.sql
src/: commands.rs  lib.rs  main.rs  schema.rs
src/commands/: allocate.rs  holdings.rs  impair.rs  import.rs  mark_to_market.rs  report.rs  transfer.rs
src/models/: mod.rs
tests/: test_allocate.rs  test_deserialization.rs  test_gaap_vs_tax.rs  test_holdings.rs  test_import.rs  test_mark_to_market.rs  test_report.rs  test_transfer.rs  test_wallet_fifo.rs
tests/common/: mod.rs
