[package]
name = "rust_rgl_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite", "chrono"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenvy = "0.15.7"
