[package]
name = "rust_rgl_ledger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
libsqlite3-sys = { version = "0.22", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.111"
anyhow = "1.0.79"
rust_decimal = "1.33.1"
rust_decimal_macros = "1.33.1"

[dev-dependencies]
diesel_migrations = "2.1"
tempfile = "3"
